pricing page changes

--- a/about-us.html
+++ b/about-us.html
@@ -26,7 +26,7 @@
 <body>
   <div class="page-wrapper">
 
-    <header
+      <header
       style="-webkit-transform:translate3d(0, 0rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
       class="nav-wrapper">
       <div data-animation="default" class="nav w-nav u-theme-dark" data-easing2="ease" data-lenis-prevent=""
@@ -36,7 +36,9 @@
         <div class="container-large">
           <div class="nav_row"><a href="index.html" aria-label="Home link" aria-current="page"
               class="nav_brand w-nav-brand w--current">
-              <div class="nav_logo"><img src="assets/header-logo.png" alt="Tech Excellence logo" loading="eager" />
+              <div class="nav_logo">
+                <img class="dark-theme-logo" src="assets/header-logo.png" alt="Tech Excellence logo" loading="eager" />
+                <img class="white-theme-logo" src="assets/header-logo-updated-black.png" alt="Tech Excellence logo" loading="eager" />
               </div>
             </a>
             <nav role="navigation" class="nav_menu w-nav-menu">
