--- a/index.html
+++ b/index.html
@@ -1704,65 +1704,74 @@
     </main>
 
 
-    <footer data-theme="light" class="footer">
+      <!-- ========== FOOTER ========== -->
+    <footer class="au-footer" data-theme="dark">
       <div class="container-large">
-        <div class="default-wrapper">
-          <div class="footer_top"><a aria-label="Link to homepage" href="index.html" aria-current="page"
-              class="footer_brand w-inline-block w--current"><img
-                src="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68af493ded4de487560b8506_Tech Excellence-logo-dark.webp"
-                loading="lazy" width="240" height="66" alt="Tech Excellence logo" class="footer_brand_logo" /></a>
-            <div class="footer_cols">
-              <div class="footer_col">
-                <div class="eyebrow text-weight-bold text-color-primary">Platform</div>
-                <div class="footer_links"><a href="platform-overview.html" class="footer_link">Overview</a><a
-                    href="platform/rewards-recognition.html" class="footer_link">Rewards &amp; Recognition</a><a
-                    href="platform/lifestyle-benefits.html" class="footer_link">Lifestyle Benefits</a><a
-                    href="platform/wellbeing-offerings.html" class="footer_link">Wellbeing Offerings</a><a
-                    href="platform/challenges-incentives.html" class="footer_link">Challenges &amp; Incentives</a><a
-                    href="platform/learning-development.html" class="footer_link">Learning &amp; Development</a><a
-                    href="platform/swag-managment.html" class="footer_link">Swag Management</a><a
-                    href="platform/life-events-gifting.html" class="footer_link">Life Events &amp; Gifting</a></div>
+        <div class="au-footer__top">
+          <a href="index.html" class="au-footer__brand">
+            <img src="assets/header-logo.png" alt="Tech Excellence logo" loading="lazy"
+              style="height: 40px; width: auto;" />
+          </a>
+          <div class="au-footer__cols">
+            <div class="au-footer__col">
+              <div class="eyebrow text-weight-bold" style="color: var(--color-secondary);">Company</div>
+              <div class="au-footer__links">
+                <a href="index.html" class="au-footer__link">Home</a>
+                <a href="about-us.html" class="au-footer__link">About</a>
+                <a href="convoSense.html" class="au-footer__link">Products</a>
+                <a href="pricing.html" class="au-footer__link">Pricing</a>
+                <a href="contact.html" class="au-footer__link">Contact Us</a>
               </div>
-              <div class="footer_col">
-                <div class="eyebrow text-weight-bold text-color-primary">Solutions</div>
-                <div class="footer_links"><a href="/solutions/workplace-wellness-challenges"
-                    class="footer_link">Workplace Wellness Challenges</a><a href="/solutions/lifestyle-spending-account"
-                    class="footer_link">Lifestyle Spending Account</a><a href="/solutions/global-employee-benefits"
-                    class="footer_link">Global Employee Benefits</a><a href="/solutions/flexible-benefits"
-                    class="footer_link">Flexible Benefits</a></div>
+            </div>
+            <div class="au-footer__col">
+              <div class="eyebrow text-weight-bold" style="color: var(--color-secondary);">Reach us out</div>
+              <div class="au-footer__links">
+                <p class="au-footer__label">For General Queries</p>
+                <a href="mailto:accounts@thetechexcellence.com"
+                  class="au-footer__link">accounts@thetechexcellence.com</a>
               </div>
-              <div class="footer_col">
-                <div class="eyebrow text-weight-bold text-color-primary">Company</div>
-                <div class="footer_links"><a href="about-us.html" class="footer_link">About</a><a
-                    aria-label="Careers (opens in a new tab)" href="https://Tech Excellence.breezy.hr/" target="_blank"
-                    class="footer_link">Careers</a><a href="pricing.html" class="footer_link">Pricing</a><a
-                    href="/explore-the-platform" class="footer_link">Demo Request</a></div>
-              </div>
-              <div class="footer_col">
-                <div class="eyebrow text-weight-bold text-color-primary">Resources</div>
-                <div class="footer_links"><a href="/news" class="footer_link">Blog</a><a href="/customer-stories"
-                    class="footer_link">Customer Stories</a><a href="/podcast" class="footer_link">Podcast</a><a
-                    href="/help" class="footer_link">Help Center</a><a href="/faq" class="footer_link">FAQ</a></div>
+            </div>
+            <div class="au-footer__col">
+              <div class="eyebrow text-weight-bold" style="color: var(--color-secondary);">Follow Us</div>
+              <div class="au-footer__social">
+                <a href="#" class="au-footer__social-link" aria-label="YouTube">
+                  <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round">
+                    <path
+                      d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19.1c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.43z" />
+                    <polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02" fill="currentColor" stroke="none" />
+                  </svg>
+                </a>
+                <a href="#" class="au-footer__social-link" aria-label="LinkedIn">
+                  <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round">
+                    <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z" />
+                    <rect x="2" y="9" width="4" height="12" />
+                    <circle cx="4" cy="4" r="2" />
+                  </svg>
+                </a>
+                <a href="#" class="au-footer__social-link" aria-label="Instagram">
+                  <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round">
+                    <rect x="2" y="2" width="20" height="20" rx="5" ry="5" />
+                    <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z" />
+                    <line x1="17.5" y1="6.5" x2="17.51" y2="6.5" />
+                  </svg>
+                </a>
               </div>
             </div>
           </div>
-          <div class="footer_bottom">
-            <div class="footer_divider"></div>
-            <div class="footer_bottom_row">
-              <div class="text-size-small text-weight-medium">© <span year="">2025</span> Tech Excellence. All rights
-                reserved.
-              </div>
-              <div class="footer_legals-links"><a href="/privacy-policy" class="legal-link">Privacy Policy</a><a
-                  href="/mobile-terms-and-conditions" class="legal-link">Mobile Terms</a><a href="/terms-of-use"
-                  class="legal-link">Terms of Use</a><a aria-label="status (opens in a new tab)"
-                  href="https://Tech Excellencedevteam.statuspage.io/" target="_blank" class="legal-link">Status</a><a
-                  aria-label="Trust (opens in a new tab)" href="https://trust.Tech Excellence.us/" target="_blank"
-                  class="legal-link">Security &amp; Trust</a></div>
-            </div>
+        </div>
+        <div class="au-footer__bottom">
+          <div class="au-footer__divider"></div>
+          <div class="au-footer__bottom-row">
+            <p class="text-size-small text-weight-medium" style="color: rgba(255,255,255,0.4);">&copy; 2025 Tech
+              Excellence. All rights reserved.</p>
           </div>
         </div>
       </div>
     </footer>
+
   </div>
   <!-- <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=68a4b6b633b9c80467497ccc"
     type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
