--- a/index.html
+++ b/index.html
@@ -1268,7 +1268,7 @@
                       </div>
                       <div class="cta-wrapper is-home-hero"><a role="button"
                           id="w-node-_4288af17-1c82-e766-edec-c062ed643801-ed643801"
-                          data-wf--button-primary--variant="base" href="/explore-the-platform"
+                          data-wf--button-primary--variant="base"
                           class="button w-inline-block">
                           <div class="button_bg"></div>
                           <div class="button_content">
@@ -1313,7 +1313,7 @@
                 <div class="home-hero_demo-block">
                   <div class="cta-wrapper is-home-hero-demo"><a role="button"
                       id="w-node-_4288af17-1c82-e766-edec-c062ed643801-ed643801" data-wf--button-primary--variant="base"
-                      href="/explore-the-platform" class="button w-inline-block">
+                       class="button w-inline-block">
                       <div class="button_bg"></div>
                       <div class="button_content">
                         <div>Request Demo</div>
@@ -1690,7 +1690,7 @@
               </div>
               <div data-w-id="ec2767bd-c048-0a7d-d731-a69b5cbeb045"><a role="button"
                   id="w-node-_4288af17-1c82-e766-edec-c062ed643801-ed643801" data-wf--button-primary--variant="base"
-                  href="/explore-the-platform" class="button w-inline-block">
+                 class="button w-inline-block">
                   <div class="button_bg"></div>
                   <div class="button_content">
                     <div>Request Demo</div>
