--- a/index.html
+++ b/index.html
@@ -1311,12 +1311,12 @@
                   </div>
                 </div>
                 <div class="home-hero_demo-block">
-                  <div class="cta-wrapper is-home-hero-demo"><a role="button"
+                  <div class="cta-wrapper is-home-hero-demo"><a role="button" href="product-detail.html"
                       id="w-node-_4288af17-1c82-e766-edec-c062ed643801-ed643801" data-wf--button-primary--variant="base"
                        class="button w-inline-block">
                       <div class="button_bg"></div>
                       <div class="button_content">
-                        <div>Request Demo</div>
+                        <div>Explore ConvoSense</div>
                       </div>
                     </a></div>
                   <div class="home-hero_demo_wrapper"><img src="/assets/convosense-main.png" loading="eager"
