app images are added

--- a/index.html
+++ b/index.html
@@ -1639,28 +1639,28 @@
 
           <!-- 8 portrait cards — varying sizes via data-size -->
           <div class="spread-cards__card spread-cards__card--lg" data-card="0">
-            <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=400&h=400&fit=crop&crop=face" alt="User 1">
+            <img src="/assets/app/app1.jpg" alt="User 1">
           </div>
           <div class="spread-cards__card spread-cards__card--sm" data-card="1">
-            <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=400&h=400&fit=crop&crop=face" alt="User 2">
+            <img src="/assets/app/app2.jpg" alt="User 1">
           </div>
           <div class="spread-cards__card spread-cards__card--md" data-card="2">
-            <img src="https://images.unsplash.com/photo-1539571696357-5a69c17a67c6?w=400&h=400&fit=crop&crop=face" alt="User 3">
+           <img src="/assets/app/app3.jpg" alt="User 1">
           </div>
           <div class="spread-cards__card spread-cards__card--lg" data-card="3">
-            <img src="https://images.unsplash.com/photo-1517841905240-472988babdf9?w=400&h=400&fit=crop&crop=face" alt="User 4">
+            <img src="/assets/app/app4.jpg" alt="User 1">
           </div>
           <div class="spread-cards__card spread-cards__card--md" data-card="4">
-            <img src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?w=400&h=400&fit=crop&crop=face" alt="User 5">
+            <img src="/assets/app/app5.jpg" alt="User 1">
           </div>
           <div class="spread-cards__card spread-cards__card--sm" data-card="5">
-            <img src="https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?w=400&h=400&fit=crop&crop=face" alt="User 6">
+            <img src="/assets/app/app11.jpg" alt="User 1">
           </div>
           <div class="spread-cards__card spread-cards__card--lg" data-card="6">
-            <img src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?w=400&h=400&fit=crop&crop=face" alt="User 7">
+            <img src="/assets/app/app7.jpg" alt="User 1">
           </div>
           <div class="spread-cards__card spread-cards__card--md" data-card="7">
-            <img src="https://images.unsplash.com/photo-1531746020798-e6953c6e8e04?w=400&h=400&fit=crop&crop=face" alt="User 8">
+            <img src="/assets/app/app8.jpg" alt="User 1">
           </div>
         </div>
       </section>
