--- a/pricing.html
+++ b/pricing.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8" />
   <title>Nyxo Pricing - Fair & Transparent</title>
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-
+<link href="pricing-original.css" rel="stylesheet" type="text/css" />
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link href="main.css" rel="stylesheet" type="text/css" />
-  <link href="pricing-original.css" rel="stylesheet" type="text/css" />
+  
 
   <meta name="theme-color" content="#260B40">
 </head>
@@ -693,7 +693,7 @@
     </footer>
 
   </div>
-
+<script src="/script/jquery-3.5.1.min.js" type="text/javascript"></script>
   <!-- Tab switching JS -->
   <script>
     document.addEventListener('DOMContentLoaded', function () {
