header menu coming soon badge

--- a/about-us.html
+++ b/about-us.html
@@ -97,43 +97,25 @@
                                     d="M19.1441 5.6109C19.3529 5.8198 19.3529 6.15848 19.1441 6.36738L14.2876 11.2238C14.0787 11.4327 13.74 11.4327 13.5311 11.2238L13.1494 10.842C12.9405 10.6332 12.9405 10.2945 13.1494 10.0856L16.434 6.80091H1.01245C0.717027 6.80091 0.477539 6.56142 0.477539 6.266V5.71228C0.477539 5.41686 0.717027 5.17737 1.01245 5.17737H16.434L13.1494 1.89272C12.9405 1.68382 12.9405 1.34513 13.1494 1.13624L13.5311 0.75446C13.74 0.545564 14.0787 0.545565 14.2876 0.754461L19.1441 5.6109Z"
                                     fill="#4a45ff" />
                                 </svg></div>
-                            </a><a href="#"
-                              class="nav_dropdown_menu_link w-inline-block">
+                            </a><div
+                              class="nav_dropdown_menu_link w-inline-block nav-coming-soon">
                               <div class="nav_dropdown_menu_link_icon">
                                 <img src="assets/hero_card_leaf.png" alt="" loading="eager" class="nav-menu-leaf-icon" />
                               </div>
-                              <div>Lead Sense</div>
-                              <div class="nav_dropdown_menu_link_arrow w-embed"><svg xmlns="http://www.w3.org/2000/svg"
-                                  width="20" height="12" viewBox="0 0 20 12" fill="none" role="none">
-                                  <path
-                                    d="M19.1441 5.6109C19.3529 5.8198 19.3529 6.15848 19.1441 6.36738L14.2876 11.2238C14.0787 11.4327 13.74 11.4327 13.5311 11.2238L13.1494 10.842C12.9405 10.6332 12.9405 10.2945 13.1494 10.0856L16.434 6.80091H1.01245C0.717027 6.80091 0.477539 6.56142 0.477539 6.266V5.71228C0.477539 5.41686 0.717027 5.17737 1.01245 5.17737H16.434L13.1494 1.89272C12.9405 1.68382 12.9405 1.34513 13.1494 1.13624L13.5311 0.75446C13.74 0.545564 14.0787 0.545565 14.2876 0.754461L19.1441 5.6109Z"
-                                    fill="#4a45ff" />
-                                </svg></div>
-                            </a><a href="#"
-                              class="nav_dropdown_menu_link w-inline-block">
+                              <div>Lead Sense <div class="commin-soon">comming soon</div></div>
+                            </div><div
+                              class="nav_dropdown_menu_link w-inline-block nav-coming-soon">
                               <div class="nav_dropdown_menu_link_icon">
                                 <img src="assets/hero_card_leaf.png" alt="" loading="eager" class="nav-menu-leaf-icon" />
                               </div>
-                              <div>CommandCore</div>
-                              <div class="nav_dropdown_menu_link_arrow w-embed"><svg xmlns="http://www.w3.org/2000/svg"
-                                  width="20" height="12" viewBox="0 0 20 12" fill="none" role="none">
-                                  <path
-                                    d="M19.1441 5.6109C19.3529 5.8198 19.3529 6.15848 19.1441 6.36738L14.2876 11.2238C14.0787 11.4327 13.74 11.4327 13.5311 11.2238L13.1494 10.842C12.9405 10.6332 12.9405 10.2945 13.1494 10.0856L16.434 6.80091H1.01245C0.717027 6.80091 0.477539 6.56142 0.477539 6.266V5.71228C0.477539 5.41686 0.717027 5.17737 1.01245 5.17737H16.434L13.1494 1.89272C12.9405 1.68382 12.9405 1.34513 13.1494 1.13624L13.5311 0.75446C13.74 0.545564 14.0787 0.545565 14.2876 0.754461L19.1441 5.6109Z"
-                                    fill="#4a45ff" />
-                                </svg></div>
-                            </a><a href="#"
-                              class="nav_dropdown_menu_link w-inline-block">
+                              <div>CommandCore <div class="commin-soon">comming soon</div></div>
+                            </div><div
+                              class="nav_dropdown_menu_link w-inline-block nav-coming-soon">
                               <div class="nav_dropdown_menu_link_icon">
                                 <img src="assets/hero_card_leaf.png" alt="" loading="eager" class="nav-menu-leaf-icon" />
                               </div>
-                              <div>Engagebot</div>
-                              <div class="nav_dropdown_menu_link_arrow w-embed"><svg xmlns="http://www.w3.org/2000/svg"
-                                  width="20" height="12" viewBox="0 0 20 12" fill="none" role="none">
-                                  <path
-                                    d="M19.1441 5.6109C19.3529 5.8198 19.3529 6.15848 19.1441 6.36738L14.2876 11.2238C14.0787 11.4327 13.74 11.4327 13.5311 11.2238L13.1494 10.842C12.9405 10.6332 12.9405 10.2945 13.1494 10.0856L16.434 6.80091H1.01245C0.717027 6.80091 0.477539 6.56142 0.477539 6.266V5.71228C0.477539 5.41686 0.717027 5.17737 1.01245 5.17737H16.434L13.1494 1.89272C12.9405 1.68382 12.9405 1.34513 13.1494 1.13624L13.5311 0.75446C13.74 0.545564 14.0787 0.545565 14.2876 0.754461L19.1441 5.6109Z"
-                                    fill="#4a45ff" />
-                                </svg></div>
-                            </a></div>
+                              <div>Engagebot <div class="commin-soon">comming soon</div></div>
+                            </div></div>
                         </div>
                       </div>
                     </nav>
