--- a/pricing.html
+++ b/pricing.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8" />
   <title>Nyxo Pricing - Fair & Transparent</title>
   <meta content="width=device-width, initial-scale=1" name="viewport" />
+  <link rel="icon" type="image/x-icon" href="assets/Favicon/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/Favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="assets/Favicon/favicon-192x192.png" />
 <link href="pricing-original.css" rel="stylesheet" type="text/css" />
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link href="main.css" rel="stylesheet" type="text/css" />
