--- a/product-detail.html
+++ b/product-detail.html
@@ -11,10 +11,9 @@
   <link href="/product-detail.css" rel="stylesheet" type="text/css" crossorigin="anonymous" />
 
 
-  <link href="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68a4bb8497e87ada4714412a_Favicon.png"
-    rel="shortcut icon" type="image/x-icon" />
-  <link href="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68c059dd5752a36b57b64afa_WebClip.png"
-    rel="apple-touch-icon" />
+  <link rel="icon" type="image/x-icon" href="assets/Favicon/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/Favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="assets/Favicon/favicon-192x192.png" />
   <link href="https://www.fringe.us/platform-overview" rel="canonical" />
   <link rel="preconnect" href="https://cdn.prod.website-files.com" crossorigin="">
   <link href="style.css" rel="stylesheet" type="text/css" />
