--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
   <meta property="og:type" content="website" />
   <meta content="summary_large_image" name="twitter:card" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
+  <link rel="icon" type="image/x-icon" href="assets/Favicon/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/Favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="assets/Favicon/favicon-192x192.png" />
   <!-- <link href="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/css/staging-Tech Excellence.shared.4b2ed94d1.min.css"
     rel="stylesheet" type="text/css" integrity="sha384-Sy7ZTR8SC30UQB+6exvW6cZSJlh4/LQ+StE0Oo0j9zR4kGKyndX6EdXNuQJZqhOc"
     crossorigin="anonymous" /> -->
@@ -266,14 +269,7 @@
       }
     }
   </style>
-  <script
-    type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
-  <link href="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68a4bb8497e87ada4714412a_Favicon.png"
-    rel="shortcut icon" type="image/x-icon" />
-  <link href="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68c059dd5752a36b57b64afa_WebClip.png"
-    rel="apple-touch-icon" />
-  <link href="https://www.Tech Excellence.us" rel="canonical" />
-  <link rel="preconnect" href="https://cdn.prod.website-files.com" crossorigin="">
+ 
 
 
 
