--- a/about-us.html
+++ b/about-us.html
@@ -41,7 +41,8 @@
               class="nav_brand w-nav-brand w--current">
               <div class="nav_logo">
                 <img class="dark-theme-logo" src="assets/header-logo.png" alt="Tech Excellence logo" loading="eager" />
-                <img class="white-theme-logo" src="assets/header-logo-updated-black.png" alt="Tech Excellence logo" loading="eager" />
+                <img class="white-theme-logo" src="assets/header-logo-updated-black.png" alt="Tech Excellence logo"
+                  loading="eager" />
               </div>
             </a>
             <nav role="navigation" class="nav_menu w-nav-menu">
@@ -91,7 +92,8 @@
                           <div class="nav_dropdown_menu_links_col"><a href="product-detail.html"
                               class="nav_dropdown_menu_link w-inline-block">
                               <div class="nav_dropdown_menu_link_icon">
-                                <img src="assets/hero_card_leaf.png" alt="" loading="eager" class="nav-menu-leaf-icon" />
+                                <img src="assets/hero_card_leaf.png" alt="" loading="eager"
+                                  class="nav-menu-leaf-icon" />
                               </div>
                               <div>ConvoSense</div>
                               <div class="nav_dropdown_menu_link_arrow w-embed"><svg xmlns="http://www.w3.org/2000/svg"
@@ -100,25 +102,32 @@
                                     d="M19.1441 5.6109C19.3529 5.8198 19.3529 6.15848 19.1441 6.36738L14.2876 11.2238C14.0787 11.4327 13.74 11.4327 13.5311 11.2238L13.1494 10.842C12.9405 10.6332 12.9405 10.2945 13.1494 10.0856L16.434 6.80091H1.01245C0.717027 6.80091 0.477539 6.56142 0.477539 6.266V5.71228C0.477539 5.41686 0.717027 5.17737 1.01245 5.17737H16.434L13.1494 1.89272C12.9405 1.68382 12.9405 1.34513 13.1494 1.13624L13.5311 0.75446C13.74 0.545564 14.0787 0.545565 14.2876 0.754461L19.1441 5.6109Z"
                                     fill="#4a45ff" />
                                 </svg></div>
-                            </a><div
-                              class="nav_dropdown_menu_link w-inline-block nav-coming-soon">
+                            </a>
+                            <div class="nav_dropdown_menu_link w-inline-block nav-coming-soon">
                               <div class="nav_dropdown_menu_link_icon">
-                                <img src="assets/hero_card_leaf.png" alt="" loading="eager" class="nav-menu-leaf-icon" />
+                                <img src="assets/hero_card_leaf.png" alt="" loading="eager"
+                                  class="nav-menu-leaf-icon" />
                               </div>
-                              <div>Lead Sense <div class="commin-soon">comming soon</div></div>
-                            </div><div
-                              class="nav_dropdown_menu_link w-inline-block nav-coming-soon">
+                              <div>Lead Sense <div class="commin-soon">comming soon</div>
+                              </div>
+                            </div>
+                            <div class="nav_dropdown_menu_link w-inline-block nav-coming-soon">
                               <div class="nav_dropdown_menu_link_icon">
-                                <img src="assets/hero_card_leaf.png" alt="" loading="eager" class="nav-menu-leaf-icon" />
+                                <img src="assets/hero_card_leaf.png" alt="" loading="eager"
+                                  class="nav-menu-leaf-icon" />
                               </div>
-                              <div>CommandCore <div class="commin-soon">comming soon</div></div>
-                            </div><div
-                              class="nav_dropdown_menu_link w-inline-block nav-coming-soon">
+                              <div>CommandCore <div class="commin-soon">comming soon</div>
+                              </div>
+                            </div>
+                            <div class="nav_dropdown_menu_link w-inline-block nav-coming-soon">
                               <div class="nav_dropdown_menu_link_icon">
-                                <img src="assets/hero_card_leaf.png" alt="" loading="eager" class="nav-menu-leaf-icon" />
+                                <img src="assets/hero_card_leaf.png" alt="" loading="eager"
+                                  class="nav-menu-leaf-icon" />
                               </div>
-                              <div>Engagebot <div class="commin-soon">comming soon</div></div>
-                            </div></div>
+                              <div>Engagebot <div class="commin-soon">comming soon</div>
+                              </div>
+                            </div>
+                          </div>
                         </div>
                       </div>
                     </nav>
@@ -132,8 +141,7 @@
                 </div>
 
                 <div class="cta-wrapper is-nav"><a aria-label="Tech Excellence App (opens a new tab)"
-                    id="w-node-_6b4ff9b2-fc84-4be4-f185-3e4503b41ce3-03b41c41"
-                    href="#"
+                    id="w-node-_6b4ff9b2-fc84-4be4-f185-3e4503b41ce3-03b41c41" href="#"
                     class="button is-secondary-nav w-inline-block">
                     <div class="button_bg is-secondary-nav"></div>
                     <div class="button_content">
@@ -170,8 +178,8 @@
               <div class="chip_left-line"></div>
               <div class="chip_right-line"></div>
             </div>
-            <h1 class="au-hero__heading">The Future Belongs to those who embrace the <span
-                class="purple-font">power of AI</span></h1>
+            <h1 class="au-hero__heading">The Future Belongs to those who embrace the <span class="purple-font">power of
+                AI</span></h1>
             <p class="au-hero__sub text-size-large">We build tools and new ways that help people express themselves in
               different forms — giving them a chance to discover hidden talents and share their emotions with
               enterprise-grade technology.</p>
@@ -199,73 +207,56 @@
           </div>
 
           <div class="au-purpose__grid">
-             
-                 <div class="benifit-card-outer about-beni">
-                  <div class="benefit-card">
-                    <div class="beni-card-wrapper">
-                      <div fs-list-field="category" data-wf--tag--variant="base" class="category-tag">Generative
-                        workflows
-                      </div>
-                      <div class="card-bg-img">
-                        <img src="https://framerusercontent.com/images/5sE7c1qSEO1TmxpfY37lffrdVLQ.png" alt="">
-                      </div>
-                      <div class="au-purpose__card-head">
-                  <div class="au-purpose__icon">
-                    <svg width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="#714df0"
-                      stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-                      <circle cx="12" cy="12" r="10" />
-                      <path d="M2 12h20" />
-                      <path
-                        d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z" />
-                    </svg>
-                  </div>
-                </div>
-                <h3 class="au-purpose__title heading-style-h5">Our Perspective</h3>
-                <p class="au-purpose__desc">To build tools and new ways that help people express themselves in different
-                  forms. To give them a chance to discover hidden talents and share their emotions.</p>
-                <div class="au-purpose__tags">
-                  <span class="au-purpose__tag">Innovation</span>
-                  <span class="au-purpose__tag">Creativity</span>
-                  <span class="au-purpose__tag">Expression</span>
-                </div>
+
+           <div class="au-purpose-card">
+            <div class="au-purpose__card-head">
+                    <div class="au-purpose__icon">
+                      <svg width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="#714df0" stroke-width="1.5"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <circle cx="12" cy="12" r="10" />
+                        <path d="M2 12h20" />
+                        <path
+                          d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z" />
+                      </svg>
                     </div>
                   </div>
-                </div>
-                <div class="benifit-card-outer about-beni">
-                  <div class="benefit-card">
-                    <div class="beni-card-wrapper">
-                      <div fs-list-field="category" data-wf--tag--variant="base" class="category-tag">Generative
-                        workflows
-                      </div>
-                      <div class="card-bg-img">
-                        <img src="https://framerusercontent.com/images/5sE7c1qSEO1TmxpfY37lffrdVLQ.png" alt="">
-                      </div>
-                     <div class="au-purpose__card-head">
-                  <div class="au-purpose__icon">
-                    <svg width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="#714df0"
-                      stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-                      <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14" />
-                      <polyline points="22 4 12 14.01 9 11.01" />
-                    </svg>
+                  <h3 class="au-purpose__title">Our Perspective</h3>
+                  <p class="au-purpose__desc">To build tools and new ways that help people express themselves in
+                    different
+                    forms. To give them a chance to discover hidden talents and share their emotions.</p>
+                  <div class="au-purpose__tags">
+                    <span class="au-purpose__tag">Innovation</span>
+                    <span class="au-purpose__tag">Creativity</span>
+                    <span class="au-purpose__tag">Expression</span>
                   </div>
+           </div>
+
+           
+             <div class="au-purpose-card">
+              <div class="au-purpose__card-head">
+                <div class="au-purpose__icon">
+                  <svg width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="#714df0" stroke-width="1.5"
+                    stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14" />
+                    <polyline points="22 4 12 14.01 9 11.01" />
+                  </svg>
                 </div>
-                <h3 class="au-purpose__title">Our Purpose</h3>
-                <p class="au-purpose__desc">Our success comes from our team. We work together with dedication to build
-                  quality products and create real impact through technology.</p>
-                <div class="au-purpose__tags">
-                  <span class="au-purpose__tag">Teamwork</span>
-                  <span class="au-purpose__tag">Quality</span>
-                  <span class="au-purpose__tag">Impact</span>
-                </div>
-                    </div>
-                  </div>
-                </div>
+              </div>
+              <h3 class="au-purpose__title">Our Purpose</h3>
+              <p class="au-purpose__desc">Our success comes from our team. We work together with dedication to build
+                quality products and create real impact through technology.</p>
+              <div class="au-purpose__tags">
+                <span class="au-purpose__tag">Teamwork</span>
+                <span class="au-purpose__tag">Quality</span>
+                <span class="au-purpose__tag">Impact</span>
+              </div>
+            </div>
           </div>
         </div>
       </section>
 
       <!-- ========== OUR CORE — Stats ========== -->
-      <section class="section background-gradient-pink-light" data-theme="light">
+      <section class="section" data-theme="light">
         <div class="container-large">
           <div class="default-wrapper">
             <div class="default-header">
@@ -878,7 +869,7 @@
       });
     });
   </script>
-     <script>
+  <script>
     $(document).ready(function () {
       var closeTimer;
 
